# EVE-Echoes-Targeting-Speed-Calc

./: main.py  pyproject.toml
