[tool.poetry]
name = "repl_python3_EVE-Echoes-Targeting-Speed-Calc"
version = "0.1.0"
description = "As the title says, its a Targeting speed calculator"
authors = ["Tobias Lenz"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
